Fixed @codeclimate performance issue