@@ -167,7 +167,7 @@ public class CacheInfo {
 					logger.info("getExpires(): Cached content does not have " + HEADER_REQUEST_TIME + " header: "
 							+ this.url + ".");
 				}
-				return new Long(0);
+				return Long.valueOf(0);
 			}
 			long requestTime = Long.parseLong(requestTimeText);
 			return Urls.getExpiration(connection, requestTime);
